--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,8 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
+  <!-- <link rel="icon" type="image/png" href="assets/icon/favicon.png"/> -->
+  <link rel="icon" type="image/png" href="assets/logo-color.png"/>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
