v1 finishied (SSL + analitycs + docker + nginx + certificate COMODO

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,17 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Word Game</title>
+  <title>Letrando</title>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXXZJJKZE2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-TXXZJJKZE2');
+  </script>
 
   <base href="/"/>
 
